<resources>
    <string name="app_name">Tô Com Fome</string>
    <string name="action_settings">Configurações</string>
    <string name="lanchonete">Lanchonete</string>
    <string name="ajuda">Ajuda</string>
    <string name="relat_rio">Relatório</string>
    <string name="vazia"> </string>
    <string name="cancelar">Voltar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="empty_not_saved">Lanchonete não cadastrada, nenhum campo pode estar vazio.</string>

    <string name="pendencia_notification_title_template">Pendencia: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="pendencia_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="local">Local</string>
    <string name="responsavel">Responsável</string>
    <string name="hora_de_atendimento">Hora de Atendimento</string>
    <string name="title_activity_teste">teste</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
