<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="383dp"
        android:layout_height="392dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="124dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/bntRelatorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/bntLanchonete"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@android:color/holo_orange_light" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/bntLanchonete"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="47dp"
            android:layout_marginStart="47dp"
            android:layout_marginTop="144dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@android:color/holo_orange_light" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/bntAjuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/bntRelatorio"
            android:layout_marginEnd="46dp"
            android:layout_marginRight="46dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@android:color/holo_orange_light" />

        <TextView
            android:id="@+id/txvLanchonete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/bntRelatorio"
            android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp"
            android:text="@string/lanchonete"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txvRelatorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bntRelatorio"
            android:layout_centerHorizontal="true"
            android:text="@string/relat_rio"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txvAjuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/bntAjuda"
            android:layout_below="@+id/bntRelatorio"
            android:text="@string/ajuda"
            android:visibility="visible"
            android:layout_alignLeft="@+id/bntAjuda"
            tools:ignore="RtlCompat" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>